--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.16",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.21",
+    "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -30,9 +32,11 @@
     "apollo-server-express": "^2.19.2",
     "argon2": "^0.27.1",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
