--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,12 @@
     "@urql/exchange-graphcache": "^3.4.0",
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.5",
+    "next-urql": "^2.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-is": "^17.0.1",
     "urql": "^1.11.6"
   },
   "devDependencies": {
