--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "ts-node src/index.ts",
-    "create:migration": "mikro-orm migration:create"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,10 +26,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.3.4",
-    "@mikro-orm/core": "^4.3.4",
-    "@mikro-orm/migrations": "^4.3.4",
-    "@mikro-orm/postgresql": "^4.3.4",
     "apollo-server-express": "^2.19.2",
     "argon2": "^0.27.1",
     "connect-redis": "^5.0.0",
@@ -43,13 +38,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.30",
     "uuid": "^8.3.2"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
